[workspace]
members = [
	"contract-address",
	"fixed-hash",
	"keccak-hash",
	"tetsy-kvdb",
	"tetsy-kvdb-memorydb",
	"tetsy-kvdb-rocksdb",
	"tetsy-kvdb-shared-tests",
	"tetsy-kvdb-web",
	"parity-bytes",
	"parity-crypto",
	"parity-path",
	"plain_hasher",
	"rlp",
	"transaction-pool",
	"trace-time",
	"triehash",
	"uint",
	"parity-util-mem",
	"primitive-types",
	"ethereum-types",
	"ethbloom",
	"parity-util-mem/derive"
]
