[workspace]
members = [
	"contract-address",
	"fixed-hash",
	"keccak-hash",
	"tetsy-kvdb",
	"tetsy-kvdb-memorydb",
	"tetsy-kvdb-rocksdb",
	"tetsy-kvdb-shared-tests",
	"tetsy-kvdb-web",
	"parity-bytes",
	"parity-crypto",
	"parity-path",
	"plain_hasher",
	"rlp",
	"rlp-derive",
	"runtime",
	"transaction-pool",
	"trace-time",
	"triehash",
	"uint",
	"tetsy-util-mem",
	"primitive-types",
	"ethereum-types",
	"ethbloom",
	"tetsy-util-mem/derive"
]
