[workspace]
members = [
	"tetsy-contract-address",
	"tetsy-fixed-hash",
	"tetsy-keccak-hash",
	"tetsy-kvdb",
	"tetsy-kvdb-memorydb",
	"tetsy-kvdb-rocksdb",
	"tetsy-kvdb-shared-tests",
	"tetsy-kvdb-web",
	"tetsy-bytes",
	"tetsy-crypto",
	"tetsy-path",
	"tetsy-plain-hasher",
	"tetsy-rlp",
	"tetsy-rlp-derive",
	"tetsy-transaction-pool",
	"tetsy-trace-time",
	"tetsy-triehash",
	"uint-crate",
	"tetsy-util-mem",
	"tetsy-primitive-types",
	"vapory-types",
	"lite-types",
	"vapbloom",
	"tetsy-util-mem/derive"
]
