[package]
name = "tetsy-contract-address"
version = "0.6.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tetcoin/tetsy-common"
repository = "https://github.com/tetcoin/tetsy-common"
description = "A utility crate to create a vapory contract address"
documentation = "https://docs.rs/tetsy-contract-address/"
edition = "2018"
readme = "README.md"

[dependencies]
vapory-types = { version = "0.11.0", path = "../vapory-types" }
tetsy-rlp = { version = "0.5", path = "../tetsy-rlp" }
tetsy-keccak-hash = { version = "0.7", path = "../tetsy-keccak-hash", default-features = false }

[features]
default = []
# this uses a nightly-only feature
# to embed REAMDE.md into lib.rs module docs
external_doc = []

[package.metadata.docs.rs]
# docs.rs builds the docs with nightly rust
features = ["external_doc"]
