[package]
name = "tetsy-contract-address"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "a utility crate to create a vapory contract address"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-contract-address"


[dependencies]
vapory-types = { version = "0.10.0", path = "../vapory-types" }
tetsy-rlp = { version = "0.5", path = "../tetsy-rlp" }
tetsy-keccak-hash = { version = "0.6", path = "../tetsy-keccak-hash", default-features = false }

[features]
default = []
# this uses a nightly-only feature
# to embed REAMDE.md into lib.rs module docs
external_doc = []

[package.metadata.docs.rs]
# docs.rs builds the docs with nightly rust
features = ["external_doc"]
