[package]
name = "tetsy-crypto"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/tetcoin/tetsy-common"
description = "Crypto utils used by vapstore and network."
license = "MIT OR Apache-2.0"
autobenches = false
edition = "2018"

[[bench]]
name = "bench"
harness = false
required-features = ["publickey"]

[dependencies]
aes = "0.8.0"
aes-ctr = "0.6.0"
block-modes = "0.7.0"
digest = "0.9.0"
vapory-types = { version = "0.11.1", optional = true, path = "../vapory-types" }
hmac = "0.10.1"
lazy_static = { version = "1.4.0", optional = true }
pbkdf2 = "0.6.0"
ripemd160 = "0.9.1"
rustc-hex = { version = "2.1.0", default-features = false, optional = true }
scrypt = { version = "0.5.0" }
secp256k1 = { version = "0.20.0", optional = true, features = ["global-context", "recovery", "rand-std"] }
sha2 = "0.9.2"
subtle = "2.4.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
zeroize = { version = "1.2.0", default-features = false }

[dev-dependencies]
criterion = "0.3.3"
hex-literal = "0.3.1"

[features]
default = []
# public key crypto utils
# moved from ethkey module in tetsy vapory repository
publickey = ["secp256k1", "lazy_static", "vapory-types", "rustc-hex"]
