[package]
name = "tetsy-keccak-hash"
version = "0.7.1"
description = "`tetsy-keccak-hash` is a set of utility functions to facilitate working with Keccak hashes (256/512 bits long)."
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/tetcoin/tetsy-common"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
tetsy-primitive-types = { path = "../tetsy-primitive-types", version = "0.9.1", default-features = false }

[dev-dependencies]
tempfile = "3.1.0"
criterion = "0.3.0"

[features]
default = ["std"]
std = []

[[bench]]
name = "keccak_256"
harness = false
