[package]
name = "tetsy-kvdb-memorydb"
version = "0.3.1"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "A key-value in-memory database that implements the  `KeyValueDB` trait"
license = "GPL-3.0"
edition = "2018"

[dependencies]
tetsy-util-mem = { path = "../tetsy-util-mem", version = "0.4.2", default-features = false, features = ["std"] }
parking_lot = "0.9.0"
tetsy-kvdb = { version = "0.3.1", path = "../tetsy-kvdb" }

[dev-dependencies]
tetsy-kvdb-shared-tests = { path = "../tetsy-kvdb-shared-tests", version = "0.1.1" }
