[package]
name = "tetsy-kvdb-memorydb"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "A key-value in-memory database that implements the  `KeyValueDB` trait"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-kvdb-memorydb"

[dependencies]
tetsy-util-mem = { path = "../tetsy-util-mem", version = "0.8", default-features = false, features = ["std"] }
parking_lot = "0.11.1"
tetsy-kvdb = { version = "0.8", path = "../tetsy-kvdb" }

[dev-dependencies]
tetsy-kvdb-shared-tests = { path = "../tetsy-kvdb-shared-tests", version = "0.6" }

[features]
default = []
