[package]
name = "tetsy-kvdb-rocksdb"
version = "0.10.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "tetsy-kvdb implementation backed by RocksDB"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-kvdb-rocksdb"

[[bench]]
name = "bench_read_perf"
harness = false

[dependencies]
smallvec = "1.0.0"
fs-swap = "0.2.4"
tetsy-kvdb = { path = "../tetsy-kvdb", version = "0.8" }
log = "0.4.8"
num_cpus = "1.10.1"
parking_lot = "0.11.1"
regex = "1.3.1"
rocksdb = { version = "0.15", features = ["snappy"], default-features = false }
owning_ref = "0.4.0"
tetsy-util-mem = { path = "../tetsy-util-mem", version = "0.8", default-features = false, features = ["std", "smallvec"] }

[dev-dependencies]
alloc_counter = "0.0.4"
criterion = "0.3"
vapory-types = { path = "../vapory-types" }
tetsy-kvdb-shared-tests = { path = "../tetsy-kvdb-shared-tests", version = "0.6" }
rand = "0.8.0"
tempfile = "3.1.0"
tetsy-keccak-hash = { path = "../tetsy-keccak-hash" }
sysinfo = "0.15.3"
ctrlc = "3.1.4"
chrono = "0.4"
