[package]
name = "tetsy-kvdb-shared-tests"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Shared tests for tetsy-kvdb functionality, to be executed against actual implementations"
license = "GPL-3.0"

[dependencies]
tetsy-kvdb = { path = "../tetsy-kvdb", version = "0.3.2" }
