[package]
name = "tetsy-kvdb-web"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "a key-value database for use in browsers"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-kvdb-web"

[dependencies]
wasm-bindgen = "0.2.69"
js-sys = "0.3.46"
tetsy-kvdb = { version = "0.8", path = "../tetsy-kvdb" }
tetsy-kvdb-memorydb = { version = "0.8", path = "../tetsy-kvdb-memorydb" }
futures = "0.3.8"
log = "0.4.11"
send_wrapper = "0.5.0"
tetsy-util-mem = { path = "../tetsy-util-mem", version = "0.8", default-features = false }
# TODO: https://github.com/tetcoin/tetsy-common/issues/479
# This is hack to enable `wasm-bindgen` feature of `parking_lot` in other dependencies.
# Thus, it's not direct dependency and do not remove until a proper fix exists.
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.46"
features = [
	'console',
	'Window',
	'IdbFactory',
	'IdbDatabase',
	'IdbTransaction',
	'IdbTransactionMode',
	'IdbOpenDbRequest',
	'IdbRequest',
	'IdbObjectStore',
	'Event',
	'EventTarget',
	'IdbCursor',
	'IdbCursorWithValue',
	'IdbKeyRange',
	'DomStringList',
]

[dev-dependencies]
console_log = "0.2.0"
tetsy-kvdb-shared-tests = { path = "../tetsy-kvdb-shared-tests", version = "0.6" }
wasm-bindgen-test = "0.3.19"
wasm-bindgen-futures = "0.4.19"
