[package]
name = "tetsy-kvdb"
version = "0.3.2"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/tetcoin/tetsy-common"
description = "Generic key-value trait"
license = "GPL-3.0"
edition = "2018"

[dependencies]
smallvec = "1.0.0"
bytes = { package = "tetsy-bytes", version = "0.1" }
tetsy-util-mem = "0.4.2"
