[package]
name = "tetsy-kvdb"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "generic key-value trait"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-kvdb"

[dependencies]
smallvec = "1.0.0"
tetsy-util-mem = { path = "../tetsy-util-mem", version = "0.8", default-features = false }
