[package]
name = "tetsy-plain-hasher"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "hasher for 32-byte keys."
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory", "hash", "hasher" ]
categories = [ "no-std", "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-plain-hasher"

[dependencies]
crunchy = { version = "0.2.2", default-features = false }

[dev-dependencies]
criterion = "0.3.0"

[features]

[[bench]]
name = "bench"
harness = false
