[package]
name = "tetsy-primitive-types"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tetcoin/tetsy-common"
description = "Primitive types shared by Vapory and Tetcore"
edition = "2018"

[dependencies]
tetsy-fixed-hash = { version = "0.7.0", path = "../tetsy-fixed-hash", default-features = false }
uint-crate = { version = "0.9.0", path = "../uint-crate", default-features = false }
tetsy-impl-serde = { version = "0.3.1", path = "impls/serde", default-features = false, optional = true }
tetsy-impl-codec = { version = "0.5.0", path = "impls/codec", default-features = false, optional = true }
tetsy-impl-num-traits = { version = "0.1.0", path = "impls/num-traits", default-features = false, optional = true }
tetsy-impl-rlp = { version = "0.3", path = "impls/rlp", default-features = false, optional = true }
scale-info = { version = "0.5", features = ["derive"], default-features = false, optional = true }

[features]
default = ["std"]
std = ["uint-crate/std", "tetsy-fixed-hash/std", "tetsy-impl-codec/std"]
byteorder = ["tetsy-fixed-hash/byteorder"]
rustc-hex = ["tetsy-fixed-hash/rustc-hex"]
serde = ["std", "tetsy-impl-serde", "tetsy-impl-serde/std"]
serde_no_std = ["tetsy-impl-serde"]
codec = ["tetsy-impl-codec"]
tetsy-rlp = ["tetsy-impl-rlp"]
arbitrary = ["tetsy-fixed-hash/arbitrary", "uint-crate/arbitrary"]
fp-conversion = ["std"]
num-traits = ["tetsy-impl-num-traits"]

[[test]]
name = "scale_info"
required-features = ["scale-info"]

[[test]]
name = "fp_conversion"
required-features = ["fp-conversion"]
