[package]
name = "tetsy-primitive-types"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "primitive types shared by vapory and tetcore"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-primitive-types"

[dependencies]
tetsy-fixed-hash = { version = "0.7.0-alpha", path = "../tetsy-fixed-hash", default-features = false }
uint-crate = { version = "0.9.0-alpha", path = "../uint-crate", default-features = false }
tetsy-impl-serde = { version = "0.3.0", path = "impls/serde", default-features = false, optional = true }
tetsy-impl-codec = { version = "0.4.0", path = "impls/codec", default-features = false, optional = true }
tetsy-impl-num-traits = { version = "0.1.0", path = "impls/num-traits", default-features = false, optional = true }
tetsy-impl-rlp = { version = "0.3", path = "impls/rlp", default-features = false, optional = true }
tetsy-scale-info = { version = "0.4", features = ["derive"], default-features = false, optional = true }

[features]
default = ["std"]
std = ["uint-crate/std", "tetsy-fixed-hash/std", "tetsy-impl-codec/std"]
byteorder = ["tetsy-fixed-hash/byteorder"]
rustc-hex = ["tetsy-fixed-hash/rustc-hex"]
serde = ["std", "tetsy-impl-serde", "tetsy-impl-serde/std"]
serde_no_std = ["tetsy-impl-serde"]
codec = ["tetsy-impl-codec"]
rlp = ["tetsy-impl-rlp"]
arbitrary = ["tetsy-fixed-hash/arbitrary", "uint-crate/arbitrary"]
fp-conversion = ["std"]
num-traits = ["tetsy-impl-num-traits"]

[[test]]
name = "scale_info"
required-features = ["tetsy-scale-info"]

[[test]]
name = "fp_conversion"
required-features = ["fp-conversion"]
