[package]
name = "tetsy-rlp-derive"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0"
description = "Derive macro for #[derive(tetsy-rlpEncodable, tetsy-rlpDecodable)]"
homepage = "http://parity.io"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.14"
quote = "1.0.2"
proc-macro2 = "1.0.8"

[dev-dependencies]
# tetsy-rlp = "0.4.5"
