[package]
name = "tetsy-rlp"
version = "0.4.5"
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://github.com/paritytech/parity-common"
license = "MIT/Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
rustc-hex = { version = "2.0.1", default-features = false }

[dev-dependencies]
criterion = "0.3.0"
hex-literal = "0.2.1"
tetsy-primitive-types = { version = "0.9.0", features = ["tetsy-impl-rlp"] }

[features]
default = ["std"]
std = ["rustc-hex/std"]

[[bench]]
name = "rlp"
path = "benches/rlp.rs"
harness = false
