[package]
name = "tetsy-rlp"
version = "0.5.0-alpha"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "recursive-length prefix encoding, decoding, and compression"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-rlp"

[dependencies]
bytes = { version = "1", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }

[dev-dependencies]
criterion = "0.3.0"
hex-literal = "0.3.1"
tetsy-primitive-types = { path = "../tetsy-primitive-types", version = "0.8.0", features = ["tetsy-impl-rlp"] }

[features]
default = ["std"]
std = ["bytes/std", "rustc-hex/std"]

[[bench]]
name = "rlp"
path = "benches/rlp.rs"
harness = false
