[package]
name = "tetsy-runtime"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"

description = "Tokio runtime wrapper"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://core.tetcoin.org/"
keywords = ["tetsy", "runtime", "tokio"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["compat"] }
futures01 = { package = "futures", version = "0.1" }
tokio-compat = "0.1"
tokio = { version = "0.2", features = ["full"] }

[features]
test-helpers = []
