[package]
name = "tetsy-runtime"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "tokio runtime wrapper"
license = "GPL-3.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory", "tetsy", "runtime", "tokio" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-runtime"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["compat"] }
futures01 = { package = "futures", version = "0.1" }
tokio-compat = "0.1"
tokio = { version = "0.2", features = ["full"] }

[features]
test-helpers = []
