[package]
name = "tetsy-trace-time"
description = "Easily trace time in a tetsy fashion to execute a scope."
version = "0.1.4"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/tetcoin/tetsy-common"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.8"
