[package]
name = "tetsy-transaction-pool"
version = "2.0.3"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "generic transaction pool."
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-transaction-pool"

[dependencies]
log = "0.4.8"
smallvec = "1.6.0"

[dev-dependencies]
vapory-types = { version = "0.10.0", path = "../vapory-types" }
