[package]
description = "Tetsy Common Generic Transaction Pool."
name = "tetsy-transaction-pool"
version = "2.0.4"
license = "MIT OR Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/tetcoin/tetsy-common"
edition = "2018"

[dependencies]
log = "0.4.8"
smallvec = "1.6.0"

[dev-dependencies]
vapory-types = { version = "0.11.1", path = "../vapory-types" }
