[package]
name = "tetsy-triehash"
version = "0.8.3"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "In-memory patricia trie operations"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-triehash"

[dependencies]
tetsy-hash-db = { version = "0.15.2", default-features = false }
tetsy-rlp = { version = "0.5", path = "../tetsy-rlp", default-features = false }

[dev-dependencies]
criterion = "0.3.0"
tetsy-keccak-hasher = "0.15.2"
vapory-types = { version = "0.10.0", path = "../vapory-types" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
trie-standardmap = "0.15.2"
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"tetsy-hash-db/std",
	"tetsy-rlp/std",
]

[[bench]]
name = "triehash"
path = "benches/triehash.rs"
harness = false
