[package]
name = "uint-crate"
version = "0.8.9"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "tetsy large fixed-size integer arithmetic"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/uint-crate"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
crunchy = { version = "0.2.2", default-features = false }
qc = { package = "quickcheck", version = "0.9.0", optional = true }
rand07 = { package = "rand", version = "0.7", default-features = false, optional = true }
hex = { version = "0.4", default-features = false }
static_assertions = "1.0.0"
arbitrary = { version = "0.4", optional = true }

[features]
default = ["std"]
std = ["byteorder/std", "crunchy/std", "hex/std"]
quickcheck = ["qc", "rand07"]

[[example]]
name = "modular"

[[test]]
name = "uint_tests"
required-features = ["std"]

[dev-dependencies]
criterion = "0.3.0"
num-bigint = "0.3.1"

[target.'cfg(unix)'.dev-dependencies]
rug = { version = "1.6.0", default-features = false, features = ["integer"] }

[[bench]]
name = "bigint"
harness = false
