[package]
name = "vapbloom"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Vapory bloom filter"
license = "MIT"
documentation = "https://docs.rs/vapbloom"
homepage = "https://github.com/tetcoin/tetsy-common"
repository = "https://github.com/tetcoin/tetsy-common"
edition = "2018"

[dependencies]
tiny-keccak = "1.5"
crunchy = { version = "0.2", default-features = false, features = ["limit_256"] }
tetsy-fixed-hash = { path = "../tetsy-fixed-hash", version = "0.5", default-features = false }
tetsy-impl-serde = { path = "../tetsy-primitive-types/impls/serde", version = "0.2", default-features = false, optional = true }
tetsy-impl-rlp = { path = "../tetsy-primitive-types/impls/rlp", version = "0.2", default-features = false }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
hex-literal = "0.2"

[features]
default = ["std", "serialize", "libc", "rustc-hex"]
std = ["tetsy-fixed-hash/std", "crunchy/std"]
serialize = ["std", "tetsy-impl-serde"]
libc = ["tetsy-fixed-hash/libc"]
rustc-hex = ["tetsy-fixed-hash/rustc-hex"]

[[bench]]
name = "bloom"
path = "benches/bloom.rs"
harness = false

[[bench]]
name = "unrolling"
path = "benches/unrolling.rs"
harness = false
