[package]
name = "vapbloom"
version = "0.10.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "vapory bloom filter"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/vapbloom"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
crunchy = { version = "0.2.2", default-features = false, features = ["limit_256"] }
tetsy-fixed-hash = { path = "../tetsy-fixed-hash", version = "0.7.0-alpha", default-features = false }
tetsy-impl-serde = { path = "../tetsy-primitive-types/impls/serde", version = "0.3.0", default-features = false, optional = true }
tetsy-impl-rlp = { path = "../tetsy-primitive-types/impls/rlp", version = "0.3.0-alpha", default-features = false, optional = true }
tetsy-impl-codec = { version = "0.4.0", path = "../tetsy-primitive-types/impls/codec", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3.0"
rand = "0.8.0"
hex-literal = "0.3.1"

[features]
default = ["std", "rlp", "serialize", "rustc-hex"]
std = ["tetsy-fixed-hash/std", "crunchy/std"]
serialize = ["std", "tetsy-impl-serde"]
rustc-hex = ["tetsy-fixed-hash/rustc-hex"]
arbitrary = ["tetsy-fixed-hash/arbitrary"]
rlp = ["tetsy-impl-rlp"]
codec = ["tetsy-impl-codec"]

[[bench]]
name = "bloom"
path = "benches/bloom.rs"
harness = false

[[bench]]
name = "unrolling"
path = "benches/unrolling.rs"
harness = false
