[package]
name = "vapory-types"
version = "0.10.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "vapory types"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/vapory-types"

[dependencies]
vapbloom = { path = "../vapbloom", version = "0.10", default-features = false }
tetsy-fixed-hash = { path = "../tetsy-fixed-hash", version = "0.7.0-alpha", default-features = false, features = ["byteorder", "rustc-hex"] }
uint-crate = { path = "../uint-crate", package = "uint-crate", version = "0.9.0-alpha", default-features = false }
tetsy-primitive-types = { path = "../tetsy-primitive-types", version = "0.8.0", features = ["byteorder", "rustc-hex"], default-features = false }
tetsy-impl-serde = { path = "../tetsy-primitive-types/impls/serde", version = "0.3.0", default-features = false, optional = true }
tetsy-impl-rlp = { path = "../tetsy-primitive-types/impls/rlp", version = "0.3.0-alpha", default-features = false, optional = true }
tetsy-impl-codec = { version = "0.4.0", path = "../tetsy-primitive-types/impls/codec", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.41"

[features]
default = ["std", "rlp", "serialize"]
std = ["uint-crate/std", "tetsy-fixed-hash/std", "vapbloom/std", "tetsy-primitive-types/std"]
serialize = ["std", "tetsy-impl-serde", "tetsy-primitive-types/serde", "vapbloom/serialize"]
arbitrary = ["vapbloom/arbitrary", "tetsy-fixed-hash/arbitrary", "uint-crate/arbitrary"]
rlp = ["tetsy-impl-rlp", "vapbloom/rlp", "tetsy-primitive-types/rlp"]
codec = ["tetsy-impl-codec", "vapbloom/codec"]
num-traits = ["tetsy-primitive-types/num-traits"]
